--- a/styles/global.css
+++ b/styles/global.css
@@ -15,12 +15,32 @@
     --font-family: "Alice", serif;
     --text-lg: bold 32px/125% var(--font-family);
     --text: 16px/1.5 var(--font-family);
-    --text-md: 14px/175% var(--font-family);
-    --text-sm: 12px/175% var(--font-family);
+    --text-md: 14px/170% var(--font-family);
+    --text-sm: 12px/170% var(--font-family);
 }
 
 body {
     font: var(--text);
     color: var(--text-color-secondary);
     background-color: var(--background-color);
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
+    color: var(--brand-color);
+    text-decoration: underline;
+}
+
+.container {
+    padding-inline: 32px;
+    max-width: 1280px;
+    margin-inline: auto;
+}
+
+.bg-surface-color {
+    background-color: var(--surface-color);
 }
