--- a/styles/global.css
+++ b/styles/global.css
@@ -37,7 +37,7 @@ a:hover {
 
 .container {
     padding-inline: 32px;
-    max-width: 1280px;
+    /* max-width: 1280px; */
     margin-inline: auto;
 }
 
